@@ -1,0 +1,9 @@
+// Includes
+#include "dimmedscreentest.h"
+
+int main(int argc, char* argv[]) {
+
+	// Create the test application
+	DimmedScreenTest app;
+	return app.main(argc, argv);
+}
